--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
       if (Function('/*@cc_on return document.documentMode===10@*/')()){
         document.write('<script src="./polyfill/ie10.js"><\/script>');
       }
+      window.electron = require('electron');
     </script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
